# services/UserManagement/user-manager-server/src/main/java/ch/heigvd/amt/usermanager/api/endpoints/AuthController.java
@@ -1,7 +1,6 @@
 package ch.heigvd.amt.usermanager.api.endpoints;
 
 import ch.heigvd.amt.usermanager.api.exceptions.ApiException;
-import ch.heigvd.amt.usermanager.api.util.ApiResponseMessage;
 import ch.heigvd.amt.usermanager.configuration.JwtToken;
 import ch.heigvd.amt.usermanager.entities.UserEntity;
 import ch.heigvd.amt.usermanager.model.JwtRequest;
@@ -17,7 +16,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
-import java.util.Optional;
 
 @RestController
 @RequestMapping("/authenticate")
@@ -30,29 +28,22 @@ public class AuthController {
     private UserRepository userRepository;
 
     @PostMapping
-    public ResponseEntity<Object> createAuthenticationToken(@ApiParam(value = "" ,required=true )  @Valid @RequestBody ch.heigvd.amt.usermanager.api.model.JwtRequest user) throws Exception {
+    public ResponseEntity<Object> createAuthenticationToken(@ApiParam(value = "" ,required=true )  @Valid @RequestBody JwtRequest user) throws Exception {
 
         String email = user.getEmail();
         String password = user.getPassword();
 
-        if(email == null || password == null ){
-           // return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Malformated request");
-            throw new ApiException(HttpStatus.BAD_REQUEST.value(),"Malformated request");
+        UserEntity userEntity = userRepository.findById(email).orElse(null);
+
+        if(userEntity == null){
+            throw new ApiException(HttpStatus.NOT_FOUND, "User not found");
         }
-
-        Optional<UserEntity> userOpt = userRepository.findById(email);
-
-        if(!userOpt.isPresent()){
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("User not found");
-        }
-
-        UserEntity userEntity = userOpt.get();
 
         if(email.equals(userEntity.getEmail()) && password.equals(userEntity.getPassword())){
             String token = jwtToken.generateToken(userEntity);
             return ResponseEntity.status(HttpStatus.OK).body(new JwtResponse(token));
         } else {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Email or password is not right.");
+            throw new ApiException(HttpStatus.UNAUTHORIZED,"Bad credentials");
         }
     }
 
